verdaccio-vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "VPC Configuration"
        Parameters:
          - VPCCIDR
          - AZs
          - NumAZs
      - Label:
          default: "Public Subnet configuration"
        Parameters:
          - PublicSubnet1Cidr
          - PublicSubnet2Cidr
      - Label:
          default: "Private subnet configuration"
        Parameters:
          - PrivateSubnet1Cidr
          - PrivateSubnet2Cidr
    ParameterLabels:
      AZs:
        default: "Availability Zones"
      NumAZs:
        default: "Number of Availability Zones"
      VPCCIDR:
        default: "Enter IP address range for VPC"
      PublicSubnet1Cidr:
        default: "Public subnet #1 IP address range"
      PublicSubnet2Cidr:
        default: "Public subnet #2 IP address range"
      PrivateSubnet1Cidr:
        default: "Private subnet #1 IP address range"
      PrivateSubnet2Cidr:
        default: "Private subnet #2 IP address range"
Parameters: 
  AZs:
    Description: >-
      List of AZs to use for the subnets in the VPC.
      Note: The logical order is preserved.
    Type: List<AWS::EC2::AvailabilityZone::Name>
  NumAZs:
    Description: >-
      Number of AZs to use in the VPC. This must match your
      selections in the list of AZs parameter.
    Type: Number
    Default: 1
    AllowedValues: [1, 2]
  VPCCIDR:
    Description: The IP address range for this VPC
    Type: String
    Default: 11.0.0.0/16
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    MaxLength: '18'
    MinLength: '9'
  PublicSubnet1Cidr:
    Description: >-
      The IP address range for 'public' subnet in AZ 1
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 11.0.0.0/18
  PublicSubnet2Cidr:
    Description: >-
      The IP address range for 'public' subnet in AZ 2
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 11.0.64.0/18
  PrivateSubnet1Cidr:
    Description: >-
      The IP address range for 'private' subnet in AZ 1
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 11.0.128.0/18
  PrivateSubnet2Cidr:
    Description: >-
      The IP address range for 'private' subnet in AZ 2
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
    Default: 11.0.192.0/18
Conditions:
  Cond2AZ: !Equals [!Ref NumAZs, 2]
  CondNVirginiaRegion: !Equals [!Ref 'AWS::Region', 'us-east-1']
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Stack
          Value: Verdaccio
        - Key: Name
          Value: !Ref AWS::StackName
  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !Ref AZs]
      CidrBlock: !Ref PublicSubnet1Cidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Stack
          Value: Verdaccio
        - Key: Name
          Value: !Sub 'Public subnet 1 (${AWS::StackName})'
  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Condition: Cond2AZ
    Properties:
      AvailabilityZone: !Select [1, !Ref AZs]
      CidrBlock: !Ref PublicSubnet2Cidr
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC
      Tags:
        - Key: Stack
          Value: Verdaccio
        - Key: Name
          Value: !Sub 'Public subnet 2 (${AWS::StackName})'
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !Ref AZs]
      CidrBlock: !Ref PrivateSubnet1Cidr
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        - Key: Stack
          Value: Verdaccio
        - Key: Name
          Value: !Sub 'Private subnet 1 (${AWS::StackName})'
  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Condition: Cond2AZ
    Properties:
      AvailabilityZone: !Select [1, !Ref AZs]
      CidrBlock: !Ref PrivateSubnet2Cidr
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC
      Tags:
        - Key: Stack
          Value: Verdaccio
        - Key: Name
          Value: !Sub 'Private subnet 2 (${AWS::StackName})'
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-ig'
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1
  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Public Routes
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Private Routes (AZ1)
  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1
  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName} Private Routes (AZ2)
  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2
  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2
